--- a/styles/skill.css
+++ b/styles/skill.css
@@ -1,12 +1,14 @@
 * {margin: 0; padding: 0; outline: none;}
 .content{
-    width:278px;
+    width: 300px;
     margin:0;
     position:relative;
     /*float:right;*/
     font-size:12px;
     line-height:2em;
-    padding:20px 0 0 0;
+    /* padding:20px 0 0 0; */
+    height: 252px;
+    padding: 18px 0 0 0px;
 }
 .col {
     margin-left: -30px;
