--- a/styles/index.css
+++ b/styles/index.css
@@ -25,11 +25,12 @@ body{
     line-height: 28px;
 }
 .my-name{
-    /*font-family: SiYuan;*/
     font-size: 20px;
 }
+.my-name span:first-child{
+    padding-left: 10px;
+}
 .my-introduce{
-    /*font-family: SiYuan;*/
     font-size: 16px;
 }
 .header-info{
