--- a/styles/index.css
+++ b/styles/index.css
@@ -321,8 +321,36 @@ body{
 }
 .about-webDesign{
     width: 360px;
-    height: 400px;
+    height: 390px;
     background: url("../images/webdesign_background.png") no-repeat;
+    padding-top: 10px;
+}
+.about-info{
+    width: 90%;
+    padding-left: 20px;
+    font-size: 20px;
+}
+.about-info span{
+    font-size: 35px;
+    line-height: 47px;
+}
+.about-info a{
+    display: inline;
+    color: #8f9092;
+    position: relative;
+    top: -5px;
+    left: 10px;
+}
+.about-info a:hover{
+    color: #000000;
+}
+.about-info-title{
+    margin-left: 20px;
+    color: #8a8b8d;
+    font-size: 18px;
+}
+.about-info-nolink{
+    cursor: default;
 }
 .footer{
     margin-top: 12px;
