--- a/styles/skill.css
+++ b/styles/skill.css
@@ -1,14 +1,9 @@
 * {margin: 0; padding: 0; outline: none;}
 .content{
     width: 300px;
-    margin:0;
     position:relative;
-    /*float:right;*/
-    font-size:12px;
-    line-height:2em;
-    /* padding:20px 0 0 0; */
     height: 252px;
-    padding: 18px 0 0 0px;
+    top: 18px;
 }
 .col {
     margin-left: -30px;
@@ -29,6 +24,9 @@
     border-bottom:1px solid #333;
 }
 #skill li:last-child{
+    margin-bottom: 0px;
+}
+#skill li:last-child{
     margin-bottom: 0;
 }
 
@@ -44,21 +42,21 @@
     box-shadow:0px 0px 10px 1px rgba(0,198,255,0.4);
 }
 
-.html5       { width:80%;  -moz-animation:html5 2s ease-out;       -webkit-animation:html5 2s ease-out;       }
+.html       { width:80%;  -moz-animation:html 2s ease-out;       -webkit-animation:html 2s ease-out;       }
 .css        { width:70%;  -moz-animation:css 2s ease-out;        -webkit-animation:css 2s ease-out;        }
 .javascript      { width:60%;  -moz-animation:javascript 2s ease-out;      -webkit-animation:javascript 2s ease-out;      }
 .jquery   { width:60%;  -moz-animation:jquery 2s ease-out;   -webkit-animation:jquery 2s ease-out;   }
 .github       { width:70%; -moz-animation:github 2s ease-out; -webkit-animation:github 2s ease-out; }
 .photoshop { width:70%; -moz-animation:photoshop 2s ease-out; -webkit-animation:photoshop 2s ease-out; }
 
-@-moz-keyframes html5       { 0%  { width:0px;} 100%{ width:80%;}  }
+@-moz-keyframes html       { 0%  { width:0px;} 100%{ width:80%;}  }
 @-moz-keyframes css        { 0%  { width:0px;} 100%{ width:70%;}  }
 @-moz-keyframes javascript      { 0%  { width:0px;} 100%{ width:60%;}  }
 @-moz-keyframes jquery   { 0%  { width:0px;} 100%{ width:60%;}  }
 @-moz-keyframes github      { 0%  { width:0px;} 100%{ width:70%;} }
 @-moz-keyframes photoshop { 0%  { width:0px;} 100%{ width:70%;} }
 
-@-webkit-keyframes html5       { 0%  { width:0px;} 100%{ width:80%;}  }
+@-webkit-keyframes html       { 0%  { width:0px;} 100%{ width:80%;}  }
 @-webkit-keyframes css        { 0%  { width:0px;} 100%{ width:70%;}  }
 @-webkit-keyframes javascript      { 0%  { width:0px;} 100%{ width:60%;}  }
 @-webkit-keyframes jquery   { 0%  { width:0px;} 100%{ width:60%;}  }
