--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,6 @@
+/**
+ * Created by hejing on 2016/11/5.
+ */
 body{
     background: #f1f2f3 url("../images/bg.png") repeat top left;
     /*font-family: SiYuan;*/
