--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,3 +1,6 @@
+/**
+ * Created by hejing on 2016/11/5.
+ */
 body, div, dl, dt, dd, ul, li, h1, h2, h3, h4, h5, h6, input, form, a, p, textarea{
     margin: 0;
     padding: 0;
