添加项目节点提示

--- a/styles/index.css
+++ b/styles/index.css
@@ -363,6 +363,11 @@ body{
     margin-top: 12px;
     border-top: #63c4d7 4px solid;
 }
+#tips {
+    font-size: 16px;
+    margin-left: 118px;
+    display: none;
+}
 /*公共样式*/
 .public-container{
     position: relative;
