--- a/styles/PageSlider.css
+++ b/styles/PageSlider.css
@@ -22,7 +22,7 @@ html, body {
 }
 
 .page:first-child {
-    background-color: #7B68EE;
+    background-color: #34345c;
 }
 
 .page:nth-child(2) {
@@ -37,11 +37,16 @@ html, body {
     background-color: #40E0D0;
 }
 
+.mypic{
+    padding-top: 20px;
+    text-align: center;
+}
+
 .title {
     width: 100%;
     text-align: center;
-    padding-top: 40px;
-    color: #000;
+    padding-top: 20px;
+    color: #fbf8f8;
     font-size: 18px;
     opacity: 0;
 }
@@ -50,11 +55,18 @@ html, body {
     width: 100%;
     text-align: center;
     padding-top: 20px;
-    color: #000;
+    color: #fbf8f8;
     font-size: 16px;
     opacity: 0;
 }
-
+.content{
+    width: 90%;
+    text-align: center;
+    color: #fbf8f8;
+    padding-top: 20px;
+    font-size: 16px;
+    margin: 0 auto;
+}
 .arrow{
     position: absolute;
     left: 50%;
@@ -84,6 +96,18 @@ html, body {
     background: url(../images/arrow.png) no-repeat;
     background-size: 33px auto;
     -webkit-transform: rotate(-90deg);
+}
+
+.current .mypic{
+    -webkit-animation: slideToTop .8s ease both;
+}
+
+.current .title{
+    -webkit-animation: slideToTop .8s 0.3s ease both;
+}
+
+.current .subtitle{
+    -webkit-animation: slideToTop .8s 0.6s ease both;
 }
 
 .current .arrow {
