--- a/styles/PageSlider.css
+++ b/styles/PageSlider.css
@@ -34,7 +34,7 @@ html, body {
 }
 
 .page:last-child {
-    background-color: #40E0D0;
+    background-color: #00BFFF;
 }
 
 .mypic{
@@ -43,24 +43,26 @@ html, body {
 }
 
 .title {
-    width: 100%;
+    width: 80%;
     text-align: center;
     padding-top: 20px;
     color: #fbf8f8;
     font-size: 18px;
     opacity: 0;
+    margin: 0 auto;
 }
 
 .subtitle {
-    width: 100%;
+    width: 80%;
     text-align: center;
     padding-top: 20px;
     color: #fbf8f8;
     font-size: 16px;
     opacity: 0;
+    margin: 0 auto;
 }
 .content{
-    width: 90%;
+    width: 80%;
     color: #fbf8f8;
     padding-top: 20px;
     font-size: 16px;
@@ -104,9 +106,11 @@ html, body {
 .current .title{
     -webkit-animation: slideToTop .8s 0.3s ease both;
 }
-
 .current .subtitle{
     -webkit-animation: slideToTop .8s 0.6s ease both;
+}
+.current .content{
+    -webkit-animation: slideToTop .8s 0.9s ease both;
 }
 
 .current .arrow {
