--- a/styles/PageSlider.css
+++ b/styles/PageSlider.css
@@ -65,6 +65,7 @@ html, body {
     width: 80%;
     color: #fbf8f8;
     padding-top: 20px;
+    padding-bottom: 20px;
     font-size: 16px;
     margin: 0 auto;
 }
